--- a/CodeGenerator/EasyMicroservices.CodeGenerator.Core/EasyMicroservices.CodeGenerator.Core.csproj
+++ b/CodeGenerator/EasyMicroservices.CodeGenerator.Core/EasyMicroservices.CodeGenerator.Core.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
